MAIN INTRO of FOROF_EACH( arr)(fn)

--- a/tests.html
+++ b/tests.html
@@ -120,8 +120,8 @@
 <!--<script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>-->
 <!--<script src="node_modules/qunitjs/qunit/qunit.js"></script>-->
 <script src="functions-compiled.js"></script>
-<!--<script src="consoleOnlyTests-compiled.js"></script>-->
-<script src="./src/current_app-compiled.js"></script>
+<script src="consoleOnlyTests-compiled.js"></script>
+<!--<script src="./src/current_app-compiled.js"></script>-->
 
 </body>
 </html>
