GotIW  begin pipeline to work with the verses collection.

--- a/tests.html
+++ b/tests.html
@@ -8,6 +8,7 @@
     <style>
         .console {
             position: fixed;
+            font-size: larger;
             top: 0;
             height: auto;
             background: #333;
