--- a/tests.html
+++ b/tests.html
@@ -120,7 +120,7 @@
 </div>
 <!--<script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>-->
 <!--<script src="node_modules/qunitjs/qunit/qunit.js"></script>-->
-<script src="functions-compiled.js"></script>
+<script src="./src/functions-compiled.js"></script>
 <script src="consoleOnlyTests-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
 
