--- a/tests.html
+++ b/tests.html
@@ -121,7 +121,7 @@
 <!--<script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>-->
 <!--<script src="node_modules/qunitjs/qunit/qunit.js"></script>-->
 <script src="./src/functions-compiled.js"></script>
-<script src="consoleOnlyTests-compiled.js"></script>
+<script src="tests-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
 
 </body>
