WIP   CHANGING div names!  chptrGrps >> ChptrRead & versegrps >> VerseRead

--- a/testDoc.html
+++ b/testDoc.html
@@ -20,13 +20,13 @@
         .console b {
             font-weight: bold
         }
-        .verseGrps > .pst {
+        .VerseRead > .pst {
             background-color: rgba(255, 0, 0, 0.24);
         }
-        .verseGrps > .cur {
+        .VerseRead > .cur {
             font-size: larger;
         }
-        .verseGrps > .fut {
+        .VerseRead > .fut {
             background-color: rgba(145, 248, 29, 0.29);
         }
         .chptrs > .pst {
@@ -44,11 +44,11 @@
 <!--<div id="qunit-fixture"></div>-->
 <div class="book">
     <span id="testStyle">King James Version:</span>
-    <div class="chptrGrps">
+    <div class="ChptrRead">
         <div class="pst">
             <div class="chptr" id="ndx1">
                 King James Version: Chapter 1
-                <div class="verseGrps">
+                <div class="VerseRead">
                     <div class="pst">
                     </div>
                     <div class="cur">
@@ -70,7 +70,7 @@
         <div class="cur" id="curChptrGrp">
             <div class="chptr" id="ndx2">
                 King James Version: Chapter 2
-                <div class="verseGrps">
+                <div class="VerseRead">
                     <div class="pst">
                         <p>chptr:2 verse:1 ndx:0</p>
                     </div>
@@ -92,7 +92,7 @@
         <div class="fut">
             <div class="chptr" id="ndx3">
                 King James Version: Chapter 3
-                <div class="verseGrps">
+                <div class="VerseRead">
                     <div class="pst">
                         <p>chptr:3 verse:1 ndx:0</p>
                         <p>chptr:3 verse:2 ndx:1</p>
