--- a/testDoc.html
+++ b/testDoc.html
@@ -52,17 +52,17 @@
                     <div class="pst">
                     </div>
                     <div class="cur">
-                        <p>chptr:1 verse:1 ndx:0</p>
+                        <div class='vers'>chptr:1 verse:1 ndx:0</div>
                     </div>
                     <div class="fut">
-                        <p>chptr:1 verse:2 ndx:1</p>
-                        <p>chptr:1 verse:3 ndx:2</p>
-                        <p>chptr:1 verse:4 ndx:3</p>
-                        <p>chptr:1 verse:5 ndx:4</p>
-                        <p>chptr:1 verse:6 ndx:5</p>
-                        <p>chptr:1 verse:7 ndx:6</p>
-                        <p>chptr:1 verse:8 ndx:7</p>
-                        <p>chptr:1 verse:9 ndx:8</p>
+                        <div class='vers'>chptr:1 verse:2 ndx:1</div>
+                        <div class='vers'>chptr:1 verse:3 ndx:2</div>
+                        <div class='vers'>chptr:1 verse:4 ndx:3</div>
+                        <div class='vers'>chptr:1 verse:5 ndx:4</div>
+                        <div class='vers'>chptr:1 verse:6 ndx:5</div>
+                        <div class='vers'>chptr:1 verse:7 ndx:6</div>
+                        <div class='vers'>chptr:1 verse:8 ndx:7</div>
+                        <div class='vers'>chptr:1 verse:9 ndx:8</div>
                     </div>
                 </div>
             </div>
@@ -72,19 +72,19 @@
                 King James Version: Chapter 2
                 <div class="VerseRead">
                     <div class="pst">
-                        <p>chptr:2 verse:1 ndx:0</p>
+                        <div class='vers'>chptr:2 verse:1 ndx:0</div>
                     </div>
                     <div class="cur" id="curVerseGrp">
-                        <p>chptr:2 verse:2 ndx:1</p>
+                        <div class='vers'>chptr:2 verse:2 ndx:1</div>
                     </div>
                     <div class="fut">
-                        <p>chptr:2 verse:3 ndx:2</p>
-                        <p>chptr:2 verse:4 ndx:3</p>
-                        <p>chptr:2 verse:5 ndx:4</p>
-                        <p>chptr:2 verse:6 ndx:5</p>
-                        <p>chptr:2 verse:7 ndx:6</p>
-                        <p>chptr:2 verse:8 ndx:7</p>
-                        <p>chptr:2 verse:9 ndx:8</p>
+                        <div class='vers'>chptr:2 verse:3 ndx:2</div>
+                        <div class='vers'>chptr:2 verse:4 ndx:3</div>
+                        <div class='vers'>chptr:2 verse:5 ndx:4</div>
+                        <div class='vers'>chptr:2 verse:6 ndx:5</div>
+                        <div class='vers'>chptr:2 verse:7 ndx:6</div>
+                        <div class='vers'>chptr:2 verse:8 ndx:7</div>
+                        <div class='vers'>chptr:2 verse:9 ndx:8</div>
                     </div>
                 </div>
             </div>
@@ -94,24 +94,24 @@
                 King James Version: Chapter 3
                 <div class="VerseRead">
                     <div class="pst">
-                        <p>chptr:3 verse:1 ndx:0</p>
-                        <p>chptr:3 verse:2 ndx:1</p>
+                        <div class='vers'>chptr:3 verse:1 ndx:0</div>
+                        <div class='vers'>chptr:3 verse:2 ndx:1</div>
                     </div>
                     <div class="cur">
-                        <p>chptr:3 verse:3 ndx:2</p>
+                        <div class='vers'>chptr:3 verse:3 ndx:2</div>
                     </div>
                     <div class="fut">
-                        <p>chptr:3 verse:4 ndx:3</p>
+                        <div class='vers'>chptr:3 verse:4 ndx:3</div>
 
-                        <p>chptr:3 verse:5 ndx:4</p>
+                        <div class='vers'>chptr:3 verse:5 ndx:4</div>
 
-                        <p>chptr:3 verse:6 ndx:5</p>
+                        <div class='vers'>chptr:3 verse:6 ndx:5</div>
 
-                        <p>chptr:3 verse:7 ndx:6</p>
+                        <div class='vers'>chptr:3 verse:7 ndx:6</div>
 
-                        <p>chptr:3 verse:8 ndx:7</p>
+                        <div class='vers'>chptr:3 verse:8 ndx:7</div>
 
-                        <p>chptr:3 verse:9 ndx:8</p>
+                        <div class='vers'>chptr:3 verse:9 ndx:8</div>
                     </div>
                 </div>
             </div>
