--- a/testDoc.html
+++ b/testDoc.html
@@ -122,7 +122,7 @@
 <!--<script src="node_modules/qunitjs/qunit/qunit.js"></script>-->
 <script src="./src/functions-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
-<script src="testDoc-compiled.js"></script>
+<script src="./tst/testDoc-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
 </body>
 </html>
