GotIW  ADDED NEW function C_Trace(fn)(obj) TO functions.js

--- a/tests.html
+++ b/tests.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="cur" id="curChptrGrp">
+        <div class="cur" id="cur_ChptrReadGrpsGrps">
             <div class="chptr" id="ndx2">
                 King James Version: Chapter 2
                 <div class="verseGrps">
