--- a/testDoc.html
+++ b/testDoc.html
@@ -74,7 +74,7 @@
                     <div class="pst">
                         <div class='vers'>chptr:2 verse:1 ndx:0</div>
                     </div>
-                    <div class="cur" id="curVerseGrp">
+                    <div class="cur" id="cur_VerseReadGrps">
                         <div class='vers'>chptr:2 verse:2 ndx:1</div>
                     </div>
                     <div class="fut">
