REMOVED  id="ndx\d" AS NOT NEEDED in testDoc.html

--- a/testDoc.html
+++ b/testDoc.html
@@ -46,7 +46,7 @@
     <span id="testStyle">King James Version:</span>
     <div class="ChptrReadGrps">
         <div class="pst">
-            <div class="chptr" id="ndx1">
+            <div class="chptr">
                 King James Version: Chapter 1
                 <div class="VerseReadGrps">
                     <div class="pst">
@@ -67,14 +67,14 @@
                 </div>
             </div>
         </div>
-        <div class="cur" id="cur_ChptrReadGrps">
-            <div class="chptr" id="ndx2">
+        <div class="cur" id="cur_ChptrReadGrp">
+            <div class="chptr">
                 King James Version: Chapter 2
                 <div class="VerseReadGrps">
                     <div class="pst">
                         <div class='vers'>chptr:2 verse:1 ndx:0</div>
                     </div>
-                    <div class="cur" id="cur_VerseReadGrps">
+                    <div class="cur" id="cur_VerseReadGrp">
                         <div class='vers'>chptr:2 verse:2 ndx:1</div>
                     </div>
                     <div class="fut">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="fut">
-            <div class="chptr" id="ndx3">
+            <div class="chptr">
                 King James Version: Chapter 3
                 <div class="VerseReadGrps">
                     <div class="pst">
