STABLE WIP  MOCKED wt TO SEE actual verse.style.key='val'  style set style attributes

--- a/testDoc.html
+++ b/testDoc.html
@@ -27,7 +27,7 @@
             display: none;
         }
         .VerseReadGrps > .pst {
-            /*position: static;*/
+            position: static;
             background-color: rgba(255, 0, 0, 0.24);
         }
         .VerseReadGrps > .cur {
