READY FOR  REFACT TO functuonal

--- a/testDoc.html
+++ b/testDoc.html
@@ -39,7 +39,7 @@
         <!--</style>
 </head>
 <body>
-<div class="console">C_Both</div>
+<div class="console">C_Both♣♣♣5♣</div>
 
 <div class="book">
     <span id="testStyle">King James Version:</span>
