1TAT: GET h_SET_All_verse_Styles.js  TO BE Babled AND functions.js I brought const UPDATE_VerseObject = (vO) => (vers) =>  FROM testDoc.html TO h_SET_All...
CREATING h_SET_All_verse_Styles.js

SOON:  IN BindHandlers.js
 (1)  call it somehow
 (2) point Handlers / CallBacks to tomethinbg useful.

--- a/testDoc.html
+++ b/testDoc.html
@@ -120,7 +120,7 @@
 <!--<script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>-->
 <!--<script src="node_modules/qunitjs/qunit/qunit.js"></script>-->
 <script src="./src/functions-compiled.js"></script>
-<script src="./src/h_SET_All_verse_Styles.js"></script>
+<!--<script src="./src/h_SET_All_verse_Styles.js"></script>-->
 <script src="./src/objects-compiled.js"></script>
 <script src="./tst/testDoc-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
