.1TAT: EXLORED       CEEING different # of current verses >> one seems best        USING  text-align left for 'cur', center for 'pst' and 'fut'        much still to be done perfecting css stuff
BUT now how
 1TAT: EXPLORE See individual WORDS
      used Chrome's CTRL f BUTG need search and highlight regex groups of words

--- a/Job_01.html
+++ b/Job_01.html
@@ -32,16 +32,23 @@
 
         .VerseReadGrps > .pst {
             position: static;
+            text-align: center;
             background-color: rgba(255, 26, 26, 0.1);
         }
 
         .VerseReadGrps > .cur {
-            font-size: larger;
+            text-align: left;
+            font-size: large;
+            border-style: hidden;
+            padding: 5px;
+            margin: 5px;
         }
 
         .VerseReadGrps > .fut {
+            text-align: center;
             background-color: rgba(145, 248, 29, 0.11);
         }
+
 
         <!--</style>
 
@@ -397,20 +404,19 @@
             <div class="chptr" id="ndx04">
                 <div class="VerseReadGrps">
                     King James Version: Job Chapter 4
-                    <div class="pst"></div>
-                    <div class="cur">
+                    <div class="pst">
                         <div class='verse'>1 Then Eliphaz the Temanite answered and said,</div>
                     </div>
-                    <div class="fut">
+                    <div class="cur">
                         <div class='verse'>2 If we assay to commune with thee, wilt thou be grieved? but who can
                             withhold himself from
                             speaking?
                         </div>
-
+                    </div>
+                    <div class="fut">
                         <div class='verse'>3 Behold, thou hast instructed many, and thou hast strengthened the weak
                             hands.
                         </div>
-
                         <div class='verse'>4 Thy words have upholden him that was falling, and thou hast
                             strengthened the feeble knees.
                         </div>
