..1TAT  WIP  GetIW:  can click on a word and see it in a test panel on doc  1TAT: EXPLORE See individual WORDS

--- a/Job_01.html
+++ b/Job_01.html
@@ -56,6 +56,15 @@
 <body>
 <div class="console">C_Both</div>
 
+<h3>Selected Text:</h3>
+<p id="result">
+</p>
+<br/>
+<p>
+    <input type="button" id="actionButton" value="Show the selected text above" />
+</p>
+
+
 <div class="book">
     King James Version: Job
     <div class="ChptrReadGrps">
