..1TAT  USING regex Now to LOOK AT 2 OR 3 CHAPTERS AT A TIME  1TAT: EXPLORE See individual WORDS

--- a/Job_01.html
+++ b/Job_01.html
@@ -501,8 +501,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="fut">
             <div class="chptr" id="ndx05">
                 <div class="VerseReadGrps">
                     King James Version: Job Chapter 5
@@ -622,7 +620,9 @@
                     </div>
                 </div>
             </div>
-            <div class="chptr" id="ndx06">
+        </div>
+        <div class="fut">
+-            <div class="chptr" id="ndx06">
                 King James Version: Job Chapter 6
                 <div class="VerseReadGrps">
                     <div class="pst"></div>
