--- a/Job_01.html
+++ b/Job_01.html
@@ -501,6 +501,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="fut">
             <div class="chptr" id="ndx05">
                 <div class="VerseReadGrps">
                     King James Version: Job Chapter 5
@@ -620,9 +622,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="fut">
--            <div class="chptr" id="ndx06">
+            <div class="chptr" id="ndx06">
                 King James Version: Job Chapter 6
                 <div class="VerseReadGrps">
                     <div class="pst"></div>
