..1TAT  TOUCHED UP broken verse 5:25 CHAPTERS NOW pst: 1-4; cur:5;fut:6-7  1TAT: EXPLORE See individual WORDS

--- a/Job_01.html
+++ b/Job_01.html
@@ -605,9 +605,7 @@
                             and.shalt.not.sin.
                         </div>
 
-                        <div class='verse'>25 Thou shalt know also that thy seed shall be great, and thine offspring
-                            as the grass of the
-                            earth.
+                        <div class='verse'>25 Thou shalt know also that thy seed shall be great, and thine offspring as the grass of the earth.
                         </div>
 
                         <div class='verse'>26 Thou shalt come to thy grave in a full age, like as a shock of corn
