..1TAT  TOUCHED UP broken verses CHAPTERS NOW pst: 1-4; cur:5;fut:6-7  1TAT: EXPLORE See individual WORDS

--- a/Job_01.html
+++ b/Job_01.html
@@ -601,15 +601,14 @@
                         </div>
 
                         <div class='verse'>24 And thou shalt know that thy tabernacle shall be in peace; and thou
-                            shalt visit thy habitation,
-                            and.shalt.not.sin.
+                            shalt visit thy habitation, and shalt not sin.
                         </div>
 
                         <div class='verse'>25 Thou shalt know also that thy seed shall be great, and thine offspring as the grass of the earth.
                         </div>
 
                         <div class='verse'>26 Thou shalt come to thy grave in a full age, like as a shock of corn
-                            cometh in in his season.
+                            cometh in his season.
                         </div>
 
                         <div class='verse'>27 Lo this, we have searched it, so it is; hear it, and know thou it for
@@ -790,9 +789,7 @@
                                 him any more.
                             </div>
 
-                            <div class='verse'>11 Therefore I will not refrain my mouth; I will speak in the anguish
-                                of my spirit; I will
-                                complain in the bitterness of my soul.
+                            <div class='verse'>11 Therefore I will not refrain my mouth; I will speak in the anguish of my spirit; I will complain in the bitterness of my soul.
                             </div>
 
                             <div class='verse'>12 Am I a sea, or a whale, that thou settest a watch over me?</div>
