GotIW:  can select words... FOR NOW See them. .....1TAT: NEXT  HiLITE SELECTED WORDS .....1TAT: NEXT  INPUT Regex AND HiLite  1TAT: EXPLORE See individual WORDS

--- a/Job_01.html
+++ b/Job_01.html
@@ -56,14 +56,10 @@
 <body>
 <div class="console">C_Both</div>
 
-<h3>Selected Text:</h3>
+Selected Text:
 <p id="result">
+    <!--<input type="button" id="actionButton" value="Show the selected text above" />-->
 </p>
-<br/>
-<p>
-    <input type="button" id="actionButton" value="Show the selected text above" />
-</p>
-
 
 <div class="book">
     King James Version: Job
