GotIW: FIX  Some CHpts don't Style BUTCAN Cee all 8 chapters
CHANGE Chapters AS WELL AS Verses  now work;
. ...DONE  >> 1TAT:  activate BindHandler FOR Chapters
 1TAT: EXPLORE See individual WORDS

.....1TAT: NEXT  HiLITE SELECTED WORDS
.....1TAT: NEXT  INPUT Regex AND HiLite

--- a/Job_01.html
+++ b/Job_01.html
@@ -211,75 +211,74 @@ Selected Text:
                     <div class="pst"></div>
                     <div class="cur">
                         <div class="verse">1 Again there was a day when the sons of God came to present themselves
-                            before the LORD, and
-                            Satan
+                            before the LORD, and Satan
                             came also among them to present himself before the LORD.
                         </div>
-                        <div class="fut">
-                            <div class='verse'>2 And the LORD said unto Satan, From whence comest thou? And Satan
-                                answered the LORD, and said, From
-                                going to and fro in the earth, and from walking up and down in it.
-                            </div>
+                    </div>
+                    <div class="fut">
+                        <div class='verse'>2 And the LORD said unto Satan, From whence comest thou? And Satan
+                            answered the LORD, and said, From
+                            going to and fro in the earth, and from walking up and down in it.
+                        </div>
 
-                            <div class='verse'>3 And the LORD said unto Satan, Hast thou considered my servant Job, that
-                                there is none like him in
-                                the earth, a perfect and an upright man, one that feareth God, and escheweth evil? and
-                                still he
-                                holdeth fast his integrity,although thou movedst me against him, to destroy him without
-                                cause.
-                            </div>
+                        <div class='verse'>3 And the LORD said unto Satan, Hast thou considered my servant Job, that
+                            there is none like him in
+                            the earth, a perfect and an upright man, one that feareth God, and escheweth evil? and
+                            still he
+                            holdeth fast his integrity,although thou movedst me against him, to destroy him without
+                            cause.
+                        </div>
 
-                            <div class='verse'>4 And Satan answered the LORD, and said, Skin for skin, yea, all that a
-                                man hath will he give for his
-                                life.
-                            </div>
+                        <div class='verse'>4 And Satan answered the LORD, and said, Skin for skin, yea, all that a
+                            man hath will he give for his
+                            life.
+                        </div>
 
-                            <div class='verse'>5 But put forth thine hand now, and touch his bone and his flesh, and he
-                                will curse thee to thy
-                                face.
-                            </div>
+                        <div class='verse'>5 But put forth thine hand now, and touch his bone and his flesh, and he
+                            will curse thee to thy
+                            face.
+                        </div>
 
-                            <div class='verse'>6 And the LORD said unto Satan, Behold, he is in thine hand; but save his
-                                life.
-                            </div>
+                        <div class='verse'>6 And the LORD said unto Satan, Behold, he is in thine hand; but save his
+                            life.
+                        </div>
 
-                            <div class='verse'>7 So went Satan forth from the presence of the LORD, and smote Job with
-                                sore boils from the sole of
-                                his foot unto his crown.
-                            </div>
+                        <div class='verse'>7 So went Satan forth from the presence of the LORD, and smote Job with
+                            sore boils from the sole of
+                            his foot unto his crown.
+                        </div>
 
-                            <div class='verse'>8 And he took him a potsherd to scrape himself withal; and he sat down
-                                among the ashes.
-                            </div>
+                        <div class='verse'>8 And he took him a potsherd to scrape himself withal; and he sat down
+                            among the ashes.
+                        </div>
 
-                            <div class='verse'>9 Then said his wife unto him, Dost thou still retain thine integrity?
-                                curse God, and die.
-                            </div>
+                        <div class='verse'>9 Then said his wife unto him, Dost thou still retain thine integrity?
+                            curse God, and die.
+                        </div>
 
-                            <div class='verse'>10 But he said unto her, Thou speakest as one of the foolish women
-                                speaketh. What? shall we receive
-                                good at the hand of God, and shall we not receive evil? In all this did not Job sin with
-                                his
-                                lips.
-                            </div>
+                        <div class='verse'>10 But he said unto her, Thou speakest as one of the foolish women
+                            speaketh. What? shall we receive
+                            good at the hand of God, and shall we not receive evil? In all this did not Job sin with
+                            his
+                            lips.
+                        </div>
 
-                            <div class='verse'>11 Now when Job's three friends heard of all this evil that was come upon
-                                him, they came every one
-                                from his own place; Eliphaz the Temanite, and Bildad the Shuhite, and Zophar the
-                                Naamathite: for
-                                they had made an appointment together to come to mourn with him and to comfort him.
-                            </div>
+                        <div class='verse'>11 Now when Job's three friends heard of all this evil that was come upon
+                            him, they came every one
+                            from his own place; Eliphaz the Temanite, and Bildad the Shuhite, and Zophar the
+                            Naamathite: for
+                            they had made an appointment together to come to mourn with him and to comfort him.
+                        </div>
 
-                            <div class='verse'>12 And when they lifted up their eyes afar off, and knew him not, they
-                                lifted up their voice, and
-                                wept; and they rent every one his mantle, and sprinkled dust upon their heads toward
-                                heaven.
-                            </div>
+                        <div class='verse'>12 And when they lifted up their eyes afar off, and knew him not, they
+                            lifted up their voice, and
+                            wept; and they rent every one his mantle, and sprinkled dust upon their heads toward
+                            heaven.
+                        </div>
 
-                            <div class='verse'>13 So they sat down with him upon the ground seven days and seven nights,
-                                and none spake a word unto
-                                him: for they saw that his grief was very great.
-                            </div>
+                        <div class='verse'>13 So they sat down with him upon the ground seven days and seven nights,
+                            and none spake a word unto
+                            him: for they saw that his grief was very great.
                         </div>
                     </div>
                 </div>
@@ -401,7 +400,6 @@ Selected Text:
                         26 I was not in safety, neither had I rest, neither was I quiet; yet trouble came.
                     </div>
                 </div>
-
             </div>
             <div class="chptr" id="ndx04">
                 <div class="VerseReadGrps">
@@ -830,119 +828,119 @@ Selected Text:
                             sleep in the dust; and thou shalt seek me in the morning, but I shall not be.
                         </div>
                     </div>
-                    <div class="chptr" id="ndx08">
-                        King James Version: Job Chapter 8
-                        <div class="VerseReadGrps">
-                            <div class="pst"></div>
-                            <div class="cur">
-                                <div class='verse'>1 Then answered Bildad the Shuhite, and said,</div>
-                            </div>
-                            <div class="fut">
-                                <div class='verse'>2 How long wilt thou speak these things? and how long shall the
-                                    words
-                                    of thy mouth be like a
-                                    strong wind?
-                                </div>
+                </div>
+            </div>
+            <div class="chptr" id="ndx08">
+                King James Version: Job Chapter 8
+                <div class="VerseReadGrps">
+                    <div class="pst"></div>
+                    <div class="cur">
+                        <div class='verse'>1 Then answered Bildad the Shuhite, and said,</div>
+                    </div>
+                    <div class="fut">
+                        <div class='verse'>2 How long wilt thou speak these things? and how long shall the
+                            words
+                            of thy mouth be like a
+                            strong wind?
+                        </div>
 
-                                <div class='verse'>3 Doth God pervert judgment? or doth the Almighty pervert
-                                    justice?
-                                </div>
+                        <div class='verse'>3 Doth God pervert judgment? or doth the Almighty pervert
+                            justice?
+                        </div>
 
-                                <div class='verse'>4 If thy children have sinned against him, and he have cast them
-                                    away
-                                    for their
-                                    transgression;
-                                </div>
+                        <div class='verse'>4 If thy children have sinned against him, and he have cast them
+                            away
+                            for their
+                            transgression;
+                        </div>
 
-                                <div class='verse'>5 If thou wouldest seek unto God betimes, and make thy
-                                    supplication
-                                    to the Almighty;
-                                </div>
+                        <div class='verse'>5 If thou wouldest seek unto God betimes, and make thy
+                            supplication
+                            to the Almighty;
+                        </div>
 
-                                <div class='verse'>6 If thou wert pure and upright; surely now he would awake for
-                                    thee,
-                                    and make the habitation of
-                                    thy righteousness prosperous.
-                                </div>
+                        <div class='verse'>6 If thou wert pure and upright; surely now he would awake for
+                            thee,
+                            and make the habitation of
+                            thy righteousness prosperous.
+                        </div>
 
-                                <div class='verse'>7 Though thy beginning was small, yet thy latter end should
-                                    greatly
-                                    increase.
-                                </div>
+                        <div class='verse'>7 Though thy beginning was small, yet thy latter end should
+                            greatly
+                            increase.
+                        </div>
 
-                                <div class='verse'>8 For enquire, I pray thee, of the former age, and prepare
-                                    thyself to
-                                    the search of their
-                                    fathers:
-                                </div>
+                        <div class='verse'>8 For enquire, I pray thee, of the former age, and prepare
+                            thyself to
+                            the search of their
+                            fathers:
+                        </div>
 
-                                <div class='verse'>9 (For we are but of yesterday, and know nothing, because our
-                                    days
-                                    upon earth are a shadow:)
-                                </div>
+                        <div class='verse'>9 (For we are but of yesterday, and know nothing, because our
+                            days
+                            upon earth are a shadow:)
+                        </div>
 
-                                <div class='verse'>10 Shall not they teach thee, and tell thee, and utter words out
-                                    of
-                                    their heart?
-                                </div>
+                        <div class='verse'>10 Shall not they teach thee, and tell thee, and utter words out
+                            of
+                            their heart?
+                        </div>
 
-                                <div class='verse'>11 Can the rush grow up without mire? can the flag grow without
-                                    water?
-                                </div>
+                        <div class='verse'>11 Can the rush grow up without mire? can the flag grow without
+                            water?
+                        </div>
 
-                                <div class='verse'>12 Whilst it is yet in his greenness, and not cut down, it
-                                    withereth
-                                    before any other herb.
-                                </div>
+                        <div class='verse'>12 Whilst it is yet in his greenness, and not cut down, it
+                            withereth
+                            before any other herb.
+                        </div>
 
-                                <div class='verse'>13 So are the paths of all that forget God; and the hypocrite's
-                                    hope
-                                    shall perish:
-                                </div>
+                        <div class='verse'>13 So are the paths of all that forget God; and the hypocrite's
+                            hope
+                            shall perish:
+                        </div>
 
-                                <div class='verse'>14 Whose hope shall be cut off, and whose trust shall be a
-                                    spider's
-                                    web.
-                                </div>
+                        <div class='verse'>14 Whose hope shall be cut off, and whose trust shall be a
+                            spider's
+                            web.
+                        </div>
 
-                                <div class='verse'>15 He shall lean upon his house, but it shall not stand: he shall
-                                    hold it fast, but it shall not
-                                    endure.
-                                </div>
+                        <div class='verse'>15 He shall lean upon his house, but it shall not stand: he shall
+                            hold it fast, but it shall not
+                            endure.
+                        </div>
 
-                                <div class='verse'>16 He is green before the sun, and his branch shooteth forth in
-                                    his
-                                    garden.
-                                </div>
+                        <div class='verse'>16 He is green before the sun, and his branch shooteth forth in
+                            his
+                            garden.
+                        </div>
 
-                                <div class='verse'>17 His roots are wrapped about the heap, and seeth the place of
-                                    stones.
-                                </div>
+                        <div class='verse'>17 His roots are wrapped about the heap, and seeth the place of
+                            stones.
+                        </div>
 
-                                <div class='verse'>18 If he destroy him from his place, then it shall deny him,
-                                    saying,
-                                    I have not seen thee.
-                                </div>
+                        <div class='verse'>18 If he destroy him from his place, then it shall deny him,
+                            saying,
+                            I have not seen thee.
+                        </div>
 
-                                <div class='verse'>19 Behold, this is the joy of his way, and out of the earth shall
-                                    others grow.
-                                </div>
+                        <div class='verse'>19 Behold, this is the joy of his way, and out of the earth shall
+                            others grow.
+                        </div>
 
-                                <div class='verse'>20 Behold, God will not cast away a perfect man, neither will he
-                                    help
-                                    the evil doers:
-                                </div>
+                        <div class='verse'>20 Behold, God will not cast away a perfect man, neither will he
+                            help
+                            the evil doers:
+                        </div>
 
-                                <div class='verse'>21 Till he fill thy mouth with laughing, and thy lips with
-                                    rejoicing.
-                                </div>
+                        <div class='verse'>21 Till he fill thy mouth with laughing, and thy lips with
+                            rejoicing.
+                        </div>
 
-                                <div class='verse'>22 They that hate thee shall be clothed with shame; and the
-                                    dwelling
-                                    place of the wicked shall
-                                    come to nought.
-                                </div>
-                            </div>
+                        <div class='verse'>22 They that hate thee shall be clothed with shame; and the
+                            dwelling
+                            place of the wicked shall
+                            come to nought.
                         </div>
                     </div>
                 </div>
