--- a/Job_01.html
+++ b/Job_01.html
@@ -950,9 +950,10 @@ Selected Text:
 </div>
 <script src="./src/functions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
-<script src="./src/h_SET_All_verse_Styles-compiled.js"></script>
+<script src="./src/update_ReadGrps-compiled.js"></script>
+<script src="./src/set_verse_styles-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
-<script src="./tst/testDoc-compiled.js"></script>
+<script src="tst/testDoc-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
 </body>
 </html>
