MOVED update_ReadGrps Code FROM testDoc.js TO update_ReadGrp.js

--- a/testDoc.html
+++ b/testDoc.html
@@ -119,7 +119,7 @@
 </div>
 <script src="./src/functions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
-<script src="./src/update_ReadGrps-compiled.js"></script>
+<script src="src/update_ReadGrp-compiled.js"></script>
 <script src="./src/set_verse_styles-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
