--- a/Job_01.html
+++ b/Job_01.html
@@ -950,7 +950,7 @@ Selected Text:
 </div>
 <script src="./src/functions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
-<script src="./src/update_ReadGrps-compiled.js"></script>
+<script src="src/update_ReadGrp-compiled.js"></script>
 <script src="./src/set_verse_styles-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
