No luck GET_itWorking in update_ReadGrp_TESTS...

--- a/tst/update_ReadGrp_TESTS.html
+++ b/tst/update_ReadGrp_TESTS.html
@@ -123,7 +123,7 @@
 <script src="../src/set_verse_styles-compiled.js"></script>
 <script src="../src/objects-compiled.js"></script>
 <script src="update_ReadGrp_TESTS-compiled.js"></script>
-<!--<script src='../node_modules/ramda'></script>-->
-<!--<script src='../node_modules/requirejs'></script>-->
+<!--<script src="../node_modules/ramda/dist/ramda.js"></script>-->
+<!--<script src='../node_modules/requirejs/require.js'></script>-->
 </body>
 </html>
