--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -3,26 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>ramda tests</title>
-    <script>
-        let ready = function ( fn ) {
+    <!--<script>-->
+        <!--let ready = function ( fn ) {-->
 
-            // Sanity check
-            if ( typeof fn !== 'function' ) return;
+            <!--// Sanity check-->
+            <!--if ( typeof fn !== 'function' ) return;-->
 
-            // If document is already loaded, run method
-            if ( document.readyState === 'complete'  ) {
-                return fn();
-            }
+            <!--// If document is already loaded, run method-->
+            <!--if ( document.readyState === 'complete'  ) {-->
+                <!--return fn();-->
+            <!--}-->
 
-            // Otherwise, wait until document is loaded
-            // The document has finished loading and the document has been parsed but sub-resources such as images, stylesheets and frames are still loading. The state indicates that the DOMContentLoaded event has been fired.
-            document.addEventListener( 'interactive', fn, false );
+            <!--// Otherwise, wait until document is loaded-->
+            <!--// The document has finished loading and the document has been parsed but sub-resources such as images, stylesheets and frames are still loading. The state indicates that the DOMContentLoaded event has been fired.-->
+            <!--document.addEventListener( 'interactive', fn, false );-->
 
-            // Alternative: The document and all sub-resources have finished loading. The state indicates that the load event has been fired.
-            // document.addEventListener( 'complete', fn, false );
-        };
-
-    </script>
+            <!--// Alternative: The document and all sub-resources have finished loading. The state indicates that the load event has been fired.-->
+            <!--// document.addEventListener( 'complete', fn, false );-->
+        <!--};-->
+        <!--ready(function() {-->
+            <!--console.log('I AM ready!!');-->
+        <!--});-->
+    <!--</script>-->
 </head>
 <body>
 SOME "body" TEXT
@@ -34,7 +36,7 @@ SOME "body" TEXT
     ready(function() {
         console.log('I AM ready!!');
     });
-</script>
+<!--</script>
 
 <script src="tst/ramda_tests-compiled.js"></script>
 </body>
