GETTING CLOSER TO WORKING  This code RUNS ramda_tests FROM the html.  GOOD  BUT  This code DOES NOT RUN ready(....) FROM the html.  ??????

--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -32,12 +32,11 @@ SOME "body" TEXT
     Some 'book' TEST.
 </div>
 <script>
-    // Example
-    ready(function() {
-        console.log('I AM ready!!');
-    });
-<!--</script>
+//    ready(function() {
+//        console.log('I AM ready!!');
+//    }); // CAN'T CALL unless defined somewhere
+</script>
 
-<script src="tst/ramda_tests-compiled.js"></script>
+<script src="ramda_tests-compiled.js"></script>
 </body>
 </html>
